# house-market

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  docker-compose.yml  env.example  pyproject.toml
migrations/: base.py  env.py
migrations/versions/: 2024_03_29_1430-a56242370144_user_domain_models.py
src/: main.py
src/config/: db.py  email.py  password.py  redis.py  verify_code.py
src/domain/auth/: use_case.py
src/domain/user/: dependencies.py  dtos.py  entities.py  exceptions.py  types.py
src/domain/user/validators/: email.py  password.py
src/infra/database/: dependencies.py  session_factory.py
src/infra/models/: customer_profile.py  permission.py  realtor_payment_details.py  realtor_profile.py  role.py  role_permission.py  seller_payment_details.py  seller_profile.py  subscription.py  user.py
src/infra/redis/: client.py  dependencies.py
src/infra/repositories/: role.py  user.py  verify_code.py
src/infra/services/: email.py
src/infra/tasks/: send_email.py
src/lib/: dtos.py  models.py
