[tool.poetry]
name = "house-market"
version = "0.1.0"
description = ""
authors = ["Ilya Shevelev <ilasevelev10776@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.2"
fastapi = "^0.110.0"
uvicorn = {extras = ["standart"], version = "^0.29.0"}
sqlalchemy = {extras = ["asyncio"], version = "^2.0.29"}
alembic = "^1.13.1"
pydantic = {extras = ["email"], version = "^2.6.4"}
pydantic-settings = "^2.2.1"
asyncpg = "^0.29.0"
argon2-cffi = "^23.1.0"
pyjwt = "^2.8.0"


[tool.poetry.group.dev.dependencies]
ruff = "^0.3.4"
pre-commit = "^3.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.ruff]
exclude = ["./migrations"]

[tool.ruff.lint.isort]
lines-after-imports = 2

[tool.ruff.isort]
known-first-party = ["src"]

[tool.ruff.format]
quote-style = "double"
indent-style = "tab"
docstring-code-format = true
